fix(journey-maps): keep button icon visible against black background
Refs: ROKAS-1310

--- a/src/journey-maps/angular/style/_functions.scss
+++ b/src/journey-maps/angular/style/_functions.scss
@@ -75,6 +75,7 @@
 
 @mixin map-control-icon-button($icon) {
   .map-control-button {
+    color: #212121;
     background-color: #212121;
     cursor: pointer;
     height: 36px;
